--- a/src/Components/movingLogo/logo.css
+++ b/src/Components/movingLogo/logo.css
@@ -3,7 +3,7 @@ body {
     width: 100vw;
     display: grid;
     place-items: center;
-    background-color: black;
+    /* background-color: black; */
     margin: 0px;
     overflow: hidden;
 }
@@ -12,6 +12,7 @@ body {
     aspect-ratio: 1.618; /*golden ratio */
     width: 90vmin;
     position: relative;
+    /* border: 1px solid black; */
 }
 
 #wrapper > .shape {
@@ -22,4 +23,247 @@ body {
     transition: left, top, height, width, border-radius;
     transition-duration: 750ms;
     transition-timing-function: ease-in-out;
+}
+
+#wrapper > .shape:nth-child(1) {
+    background-color: #023047;
+    z-index: 2;
+}
+
+#wrapper > .shape:nth-child(2) {
+    background-color: #126782;
+    z-index: 2;
+}
+
+#wrapper > .shape:nth-child(3) {
+    background-color: #8ecae6;
+    z-index: 2;
+}
+
+#wrapper > .shape:nth-child(4) {
+    background-color: #219ebc;
+    z-index: 2;
+}
+
+#wrapper > .shape:nth-child(5) {
+    background-color: #219ebc;
+    z-index: 2;
+}
+
+#wrapper > .shape:nth-child(6) {
+    background-color: #ffb703;
+    z-index: 2;
+}
+
+#wrapper > .shape:nth-child(7) {
+    background-color: #fd9e02;
+    z-index: 2;
+}
+
+#wrapper > .shape:nth-child(8) {
+    background-color: #fb8500;
+    z-index: 1;
+}
+
+#wrapper > .shape:nth-child(9) {
+    background-color: #023047;
+    z-index: 1;
+}
+
+/* config LEO */
+#wrapper[data-configuration='0'] > .shape:nth-child(1) {
+    left: 0%;
+    top: 0%;
+    height: 100%;
+    width: 33%;
+}
+
+#wrapper[data-configuration='0'] > .shape:nth-child(2) {
+    left: 11%;
+    top: 0%;
+    height: 80%;
+    width: 22%;
+}
+
+#wrapper[data-configuration='0'] > .shape:nth-child(3) {
+    left: 33%;
+    top: 0%;
+    height: 100%;
+    width: 33%;
+}
+
+#wrapper[data-configuration='0'] > .shape:nth-child(4) {
+    left: 44%;
+    top: 20%;
+    height: 20%;
+    width: 22%;
+}
+
+#wrapper[data-configuration='0'] > .shape:nth-child(5) {
+    left: 44%;
+    top: 60%;
+    height: 20%;
+    width: 22%;
+}
+
+#wrapper[data-configuration='0'] > .shape:nth-child(6) {
+    left: 66%;
+    top: 0%;
+    height: 100%;
+    width: 33%;
+}
+
+#wrapper[data-configuration='0'] > .shape:nth-child(7) {
+    left: 77%;
+    top: 20%;
+    height: 60%;
+    width: 11%;
+}
+
+#wrapper[data-configuration='0'] > .shape:nth-child(8) {
+    left: 0%;
+    top: 0%;
+    height: 100%;
+    width: 33%;
+}
+
+#wrapper[data-configuration='0'] > .shape:nth-child(9) {
+    left: 66%;
+    top: 0%;
+    height: 100%;
+    width: 33%;
+}
+
+/* config OEL */
+#wrapper[data-configuration='1'] > .shape:nth-child(1) {
+    left: 0%;
+    top: 0%;
+    height: 100%;
+    width: 33%;
+}
+
+#wrapper[data-configuration='1'] > .shape:nth-child(2) {
+    left: 11%;
+    top: 20%;
+    height: 60%;
+    width: 11%;
+}
+
+#wrapper[data-configuration='1'] > .shape:nth-child(3) {
+    left: 33%;
+    top: 0%;
+    height: 100%;
+    width: 33%;
+}
+
+#wrapper[data-configuration='1'] > .shape:nth-child(4) {
+    left: 44%;
+    top: 20%;
+    height: 20%;
+    width: 22%;
+}
+
+#wrapper[data-configuration='1'] > .shape:nth-child(5) {
+    left: 44%;
+    top: 60%;
+    height: 20%;
+    width: 22%;
+}
+
+#wrapper[data-configuration='1'] > .shape:nth-child(6) {
+    left: 66%;
+    top: 0%;
+    height: 100%;
+    width: 33%;
+}
+
+#wrapper[data-configuration='1'] > .shape:nth-child(7) {
+    left: 77%;
+    top: 0%;
+    height: 80%;
+    width: 22%;
+}
+
+#wrapper[data-configuration='1'] > .shape:nth-child(8) {
+    left: 0%;
+    top: 0%;
+    height: 100%;
+    width: 33%;
+}
+
+#wrapper[data-configuration='1'] > .shape:nth-child(9) {
+    left: 66%;
+    top: 0%;
+    height: 100%;
+    width: 0%;
+}
+
+/* config DEV */
+#wrapper[data-configuration='2'] > .shape:nth-child(1) {
+    left: 0%;
+    top: 0%;
+    height: 100%;
+    width: 33%;
+    border-top-right-radius: 50%;
+    border-bottom-right-radius: 50%;
+}
+
+#wrapper[data-configuration='2'] > .shape:nth-child(2) {
+    left: 11%;
+    top: 20%;
+    height: 60%;
+    width: 11%;
+    border-top-right-radius: 50%;
+    border-bottom-right-radius: 50%;
+}
+
+#wrapper[data-configuration='2'] > .shape:nth-child(3) {
+    left: 33%;
+    top: 0%;
+    height: 100%;
+    width: 33%;
+}
+
+#wrapper[data-configuration='2'] > .shape:nth-child(4) {
+    left: 33%;
+    top: 20%;
+    height: 20%;
+    width: 22%;
+}
+
+#wrapper[data-configuration='2'] > .shape:nth-child(5) {
+    left: 33%;
+    top: 60%;
+    height: 20%;
+    width: 22%;
+}
+
+#wrapper[data-configuration='2'] > .shape:nth-child(6) {
+    left: 66%;
+    top: 0%;
+    height: 100%;
+    width: 33%;
+    clip-path: polygon(0% 0%, 25% 100%, 75% 100%, 100% 0%);
+}
+
+#wrapper[data-configuration='2'] > .shape:nth-child(7) {
+    left: 77%;
+    top: 0%;
+    height: 80%;
+    width: 11%;
+    clip-path: polygon(0% 0%, 50% 100%, 100% 0%);
+}
+
+#wrapper[data-configuration='2'] > .shape:nth-child(8) {
+    left: 0%;
+    top: 0%;
+    height: 100%;
+    width: 33%;
+}
+
+#wrapper[data-configuration='2'] > .shape:nth-child(9) {
+    left: 66%;
+    top: 0%;
+    height: 100%;
+    width: 33%;
 }
