--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,13 @@ button:focus-visible {
         background-color: #f9f9f9;
     }
 }
+
+.test {
+    color: #8ecae6;
+    color: #219ebc;
+    color: #126782;
+    color: #023047;
+    color: #ffb703;
+    color: #fd9e02;
+    color: #fb8500;
+}
