--- a/src/Components/atoms/movingLogo/logo.css
+++ b/src/Components/atoms/movingLogo/logo.css
@@ -1,18 +1,17 @@
-body {
+/* body {
     height: 100vh;
     width: 100vw;
     display: grid;
     place-items: center;
-    /* background-color: black; */
     margin: 0px;
     overflow: hidden;
-}
+} */
 
 #wrapper {
     aspect-ratio: 1.618; /*golden ratio */
-    width: 90vmin;
+    width: 100px;
     position: relative;
-    /* border: 1px solid black; */
+    height: 3rem;
 }
 
 #wrapper > .shape {
